kubernetes/apps/default/n8n/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: default
  labels:
    app: n8n
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      port: 5678
      targetPort: http
      protocol: TCP
